# immo-mcp

./: .dockerignore  Dockerfile  PRESENTATION.md  README.md  deployment.yaml  docker-compose-mcp.yaml  langchain_manager.py  langchain_test.py  mcp_explo.py  pyproject.toml  server.py  test_mcp.py
.github/workflows/: docker-build-push.yml  tests.yaml
src/: access_serv.py  dataAccess.py  dataProcessing.py  hugging_model_play.py  langchain_test.py  main.py  prediction_model.py  server.py
tests/: conftest.py  test_data_access.py  test_data_processing.py  test_prediction_model.py  test_server.py
