[tool.pytest.ini_options]
asyncio_mode = "auto"

[project]
name = "mcp-immo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.6",
    "huggingface_hub",
    "joblib",
    "scikit-learn",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
